--- a/index.html
+++ b/index.html
@@ -1,210 +1,280 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Kana Match</title>
+  <link href="https://fonts.googleapis.com/css2?family=Klee+One&display=swap" rel="stylesheet">
   <style>
-    body { font-family: sans-serif; text-align: center; background: #fefefe; padding: 20px; }
-    h1 { margin-bottom: 20px; }
-    .screen { display: none; }
-    .active { display: block; }
-    .grid {
+    body {
+      font-family: 'Klee One', sans-serif;
+      background-color: #f0f4ff;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+
+    h1 {
+      font-size: 36px;
+      margin-top: 20px;
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    .button {
+      background-color: #3b82f6;
+      color: white;
+      padding: 12px 24px;
+      margin: 10px;
+      border: none;
+      border-radius: 8px;
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    .button:hover {
+      background-color: #2563eb;
+    }
+
+    #gameBoard {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      margin: 20px auto;
+      max-width: 800px;
+    }
+
+    .card {
+      width: 100px;
+      height: 60px;
+      margin: 10px;
+      font-size: 24px;
+      font-weight: bold;
+      color: white;
+      border-radius: 12px;
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background-color: #a78bfa; /* 裏面の紫 */
+      transition: background-color 0.3s;
+      user-select: none;
+    }
+
+    .card.flipped {
+      background-color: #3b82f6; /* 表面の青 */
+    }
+
+    #timer, #attempts {
+      font-size: 20px;
+      margin: 10px;
+    }
+
+    #kanaGrid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+      grid-template-columns: repeat(5, 100px);
       gap: 10px;
-      max-width: 500px;
+      justify-content: center;
       margin: 20px auto;
     }
-    .card {
-      width: 80px; height: 80px; background: #ccc;
-      display: flex; align-items: center; justify-content: center;
-      font-size: 2em; cursor: pointer;
-      border-radius: 10px; user-select: none;
+
+    .kana-pair {
+      padding: 10px;
+      border: 2px solid #3b82f6;
+      border-radius: 10px;
+      cursor: pointer;
+      background-color: white;
     }
-    .flipped { background: #fff; }
-    .matched { background: #8bc34a; pointer-events: none; }
-    .card-back { font-weight: bold; color: #444; }
-    .pair-select {
-      display: flex; flex-wrap: wrap;
-      justify-content: center; max-width: 600px; margin: auto;
+
+    .kana-pair.selected {
+      background-color: #3b82f6;
+      color: white;
     }
-    .pair-select label { margin: 5px 10px; font-size: 1.2em; }
-    button { padding: 10px 20px; font-size: 1.2em; margin: 10px; }
-    #status { font-size: 1.2em; margin-top: 15px; }
-    #result { font-size: 1.4em; color: green; font-weight: bold; margin-top: 20px; }
+
+    .kana-placeholder {
+      border: 2px dashed #ccc;
+      text-align: center;
+      font-size: 24px;
+      line-height: 40px;
+      color: #888;
+      user-select: none;
+    }
   </style>
 </head>
 <body>
+  <h1>Kana Match</h1>
 
-  <!-- Start Screen -->
-  <div id="startScreen" class="screen active">
-    <h1>Kana Match</h1>
-    <button onclick="selectRandomPairs(); startGame();">Random</button>
-    <button onclick="showSetting()">Setting</button>
+  <!-- スタート画面 -->
+  <div id="mainMenu">
+    <button class="button" onclick="startRandomGame()">Random</button>
+    <button class="button" onclick="showSetting()">Setting</button>
   </div>
 
-  <!-- Setting Screen -->
-  <div id="settingScreen" class="screen">
-    <h2>Select Pairs (max 10)</h2>
-    <div class="pair-select" id="pairSelect"></div>
-    <p id="selectedCount">Selected: 0 pairs</p>
-    <button onclick="startGame()">Start</button>
-    <button onclick="hideSetting()">Back</button>
+  <!-- 設定画面 -->
+  <div id="settingScreen" class="hidden">
+    <h2>Select up to 15 pairs</h2>
+    <div id="kanaGrid"></div>
+    <button class="button" onclick="startGame()">Start</button>
+    <button class="button" onclick="goHome()">Back</button>
   </div>
 
-  <!-- Game Screen -->
-  <div id="gameScreen" class="screen">
-    <h1>Kana Match</h1>
-    <div id="status">
-      🕒 Time: <span id="timer">0</span> sec　
-      🔁 Attempts: <span id="attempts">0</span>
-    </div>
-    <div class="grid" id="grid"></div>
-    <div id="result"></div>
-    <button onclick="location.reload()">Play Again</button>
+  <!-- ゲーム画面 -->
+  <div id="gameArea" class="hidden">
+    <div id="timer">Time: 0s</div>
+    <div id="attempts">Attempts: 0</div>
+    <div id="gameBoard"></div>
+    <button class="button" onclick="goHome()">Back to Title</button>
   </div>
 
   <script>
-    const maxPairs = 10;
-    const kanaRomajiPairs = [
-      ["あ", "A"], ["い", "I"], ["う", "U"], ["え", "E"], ["お", "O"],
-      ["か", "KA"], ["き", "KI"], ["く", "KU"], ["け", "KE"], ["こ", "KO"],
-      ["さ", "SA"], ["し", "SHI"], ["す", "SU"], ["せ", "SE"], ["そ", "SO"],
-      ["た", "TA"], ["ち", "CHI"], ["つ", "TSU"], ["て", "TE"], ["と", "TO"],
-      ["な", "NA"], ["に", "NI"], ["ぬ", "NU"], ["ね", "NE"], ["の", "NO"]
+    const mainMenu = document.getElementById('mainMenu');
+    const settingScreen = document.getElementById('settingScreen');
+    const gameArea = document.getElementById('gameArea');
+    const gameBoard = document.getElementById('gameBoard');
+    const timerDisplay = document.getElementById('timer');
+    const attemptsDisplay = document.getElementById('attempts');
+    const kanaGrid = document.getElementById('kanaGrid');
+
+    const kanaList = [
+      ['a', 'あ'], ['i', 'い'], ['u', 'う'], ['e', 'え'], ['o', 'お'],
+      ['ka', 'か'], ['ki', 'き'], ['ku', 'く'], ['ke', 'け'], ['ko', 'こ'],
+      ['sa', 'さ'], ['shi', 'し'], ['su', 'す'], ['se', 'せ'], ['so', 'そ'],
+      ['ta', 'た'], ['chi', 'ち'], ['tsu', 'つ'], ['te', 'て'], ['to', 'と'],
+      ['na', 'な'], ['ni', 'に'], ['nu', 'ぬ'], ['ne', 'ね'], ['no', 'の'],
+      ['ha', 'は'], ['hi', 'ひ'], ['fu', 'ふ'], ['he', 'へ'], ['ho', 'ほ'],
+      ['ma', 'ま'], ['mi', 'み'], ['mu', 'む'], ['me', 'め'], ['mo', 'も'],
+      ['ya', 'や'], ['', '□'], ['yu', 'ゆ'], ['', '□'], ['yo', 'よ'],
+      ['ra', 'ら'], ['ri', 'り'], ['ru', 'る'], ['re', 'れ'], ['ro', 'ろ'],
+      ['wa', 'わ'], ['','□'], ['wo', 'を'], ['','□'], ['n', 'ん']
     ];
 
-    let selectedPairs = [];
+    let selectedPairs = new Set();
     let timer = 0;
+    let timerInterval;
     let attempts = 0;
-    let intervalId;
+    let flippedCards = [];
     let matchedCount = 0;
-
-    const pairSelect = document.getElementById("pairSelect");
-    const selectedCount = document.getElementById("selectedCount");
-    const timerDisplay = document.getElementById("timer");
-    const attemptsDisplay = document.getElementById("attempts");
-    const resultDisplay = document.getElementById("result");
-
-    // Setup checkbox options
-    kanaRomajiPairs.forEach(([kana, romaji]) => {
-      const label = document.createElement("label");
-      const checkbox = document.createElement("input");
-      checkbox.type = "checkbox";
-      checkbox.value = kana;
-      checkbox.onchange = () => {
-        if (checkbox.checked) {
-          if (selectedPairs.length >= maxPairs) {
-            checkbox.checked = false;
-            alert("You can select up to 10 pairs.");
-          } else {
-            selectedPairs.push([kana, romaji]);
-          }
-        } else {
-          selectedPairs = selectedPairs.filter(p => p[0] !== kana);
-        }
-        selectedCount.textContent = `Selected: ${selectedPairs.length} pairs`;
-      };
-      label.appendChild(checkbox);
-      label.append(` ${kana} ⇔ ${romaji}`);
-      pairSelect.appendChild(label);
-    });
+    function shuffle(array) {
+      for (let i = array.length - 1; i > 0; i--) {
+        const j = Math.floor(Math.random() * (i + 1));
+        [array[i], array[j]] = [array[j], array[i]];
+      }
+    }
 
     function showSetting() {
-      document.getElementById("startScreen").classList.remove("active");
-      document.getElementById("settingScreen").classList.add("active");
-    }
-
-    function hideSetting() {
-      document.getElementById("settingScreen").classList.remove("active");
-      document.getElementById("startScreen").classList.add("active");
-    }
-
-    function selectRandomPairs() {
-      const all = [...kanaRomajiPairs];
-      const shuffled = all.sort(() => Math.random() - 0.5).slice(0, maxPairs);
-      selectedPairs = shuffled;
-      const inputs = pairSelect.querySelectorAll("input");
-      inputs.forEach(input => {
-        input.checked = !!shuffled.find(([kana]) => kana === input.value);
+      mainMenu.classList.add('hidden');
+      settingScreen.classList.remove('hidden');
+      kanaGrid.innerHTML = '';
+      kanaList.forEach(([roma, hira], index) => {
+        const div = document.createElement('div');
+        if (hira === '□') {
+          div.className = 'kana-placeholder';
+          div.textContent = '□';
+        } else {
+          div.className = 'kana-pair';
+          div.textContent = `${roma} / ${hira}`;
+          div.onclick = () => {
+            if (div.classList.contains('selected')) {
+              div.classList.remove('selected');
+              selectedPairs.delete(index);
+            } else {
+              if (selectedPairs.size >= 15) return;
+              div.classList.add('selected');
+              selectedPairs.add(index);
+            }
+          };
+        }
+        kanaGrid.appendChild(div);
       });
-      selectedCount.textContent = `Selected: ${selectedPairs.length} pairs`;
     }
 
-    function startTimer() {
-      intervalId = setInterval(() => {
-        timer++;
-        timerDisplay.textContent = timer;
-      }, 1000);
+    function startRandomGame() {
+      selectedPairs = new Set();
+      while (selectedPairs.size < 15) {
+        const rand = Math.floor(Math.random() * kanaList.length);
+        if (kanaList[rand][1] !== '□') {
+          selectedPairs.add(rand);
+        }
+      }
+      launchGame();
     }
 
     function startGame() {
-      if (selectedPairs.length === 0) {
-        alert("Please select at least one pair via Random or Setting.");
-        return;
-      }
+      if (selectedPairs.size === 0) return alert("Please select at least 1 pair.");
+      launchGame();
+    }
 
-      const cards = selectedPairs.flatMap(([kana, romaji]) => [
-        { text: kana, pairId: kana + romaji },
-        { text: romaji, pairId: kana + romaji }
-      ]).sort(() => Math.random() - 0.5);
+    function launchGame() {
+      settingScreen.classList.add('hidden');
+      mainMenu.classList.add('hidden');
+      gameArea.classList.remove('hidden');
+      gameBoard.innerHTML = '';
+      attempts = 0;
+      matchedCount = 0;
+      timer = 0;
+      flippedCards = [];
+      attemptsDisplay.textContent = "Attempts: 0";
+      timerDisplay.textContent = "Time: 0s";
 
-      document.getElementById("startScreen").classList.remove("active");
-      document.getElementById("settingScreen").classList.remove("active");
-      document.getElementById("gameScreen").classList.add("active");
+      const selected = Array.from(selectedPairs).map(i => kanaList[i]);
+      const cards = [];
+      selected.forEach(([roma, hira]) => {
+        cards.push({ text: roma, match: hira });
+        cards.push({ text: hira, match: roma });
+      });
+      shuffle(cards);
 
-      const grid = document.getElementById("grid");
-      grid.innerHTML = "";
-      cards.forEach((card, i) => {
-        const div = document.createElement("div");
-        div.className = "card";
-        div.dataset.index = i;
-        div.dataset.text = card.text;
-        div.dataset.pairId = card.pairId;
-        div.innerHTML = `<span class="card-back">CHO</span>`;
-        grid.appendChild(div);
+      cards.forEach((cardData, idx) => {
+        const card = document.createElement('div');
+        card.className = 'card';
+        card.dataset.text = cardData.text;
+        card.dataset.match = cardData.match;
+        card.textContent = "CHO";
+        card.onclick = () => flipCard(card);
+        gameBoard.appendChild(card);
       });
 
-      startTimer();
-      let flipped = [];
+      timerInterval = setInterval(() => {
+        timer++;
+        timerDisplay.textContent = `Time: ${timer}s`;
+      }, 1000);
+    }
 
-      grid.addEventListener("click", e => {
-        const target = e.target.closest(".card");
-        if (!target || target.classList.contains("flipped") || target.classList.contains("matched")) return;
-        if (flipped.length >= 2) return;
-
-        target.textContent = target.dataset.text;
-        target.classList.add("flipped");
-        flipped.push(target);
-
-        if (flipped.length === 2) {
-          attempts++;
-          attemptsDisplay.textContent = attempts;
-          const [a, b] = flipped;
-
-          if (a.dataset.pairId === b.dataset.pairId && a.dataset.index !== b.dataset.index) {
-            a.classList.add("matched");
-            b.classList.add("matched");
-            matchedCount++;
-            flipped = [];
-
-            if (matchedCount === selectedPairs.length) {
-              clearInterval(intervalId);
-              resultDisplay.textContent = `🎉 Cleared in ${timer} seconds with ${attempts} attempts!`;
-            }
-          } else {
-            setTimeout(() => {
-              a.textContent = "CHO";
-              b.textContent = "CHO";
-              a.classList.remove("flipped");
-              b.classList.remove("flipped");
-              a.innerHTML = `<span class="card-back">CHO</span>`;
-              b.innerHTML = `<span class="card-back">CHO</span>`;
-              flipped = [];
-            }, 800);
+    function flipCard(card) {
+      if (card.classList.contains('flipped') || flippedCards.length >= 2) return;
+      card.classList.add('flipped');
+      card.textContent = card.dataset.text;
+      flippedCards.push(card);
+      if (flippedCards.length === 2) {
+        attempts++;
+        attemptsDisplay.textContent = `Attempts: ${attempts}`;
+        const [card1, card2] = flippedCards;
+        if (card1.dataset.match === card2.dataset.text) {
+          matchedCount++;
+          flippedCards = [];
+          if (matchedCount === selectedPairs.size) {
+            clearInterval(timerInterval);
+            setTimeout(() => alert(`Clear! Time: ${timer}s / Attempts: ${attempts}`), 300);
           }
+        } else {
+          setTimeout(() => {
+            card1.classList.remove('flipped');
+            card1.textContent = "CHO";
+            card2.classList.remove('flipped');
+            card2.textContent = "CHO";
+            flippedCards = [];
+          }, 800);
         }
-      });
+      }
+    }
+
+    function goHome() {
+      clearInterval(timerInterval);
+      mainMenu.classList.remove('hidden');
+      settingScreen.classList.add('hidden');
+      gameArea.classList.add('hidden');
+      selectedPairs.clear();
     }
   </script>
 </body>
